--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,9 +2,8 @@
   max-width: 358px;
   background-color: white;
   border-radius: 10px;
-  position: absolute;
-  top: 196px;
   padding: 34px 36px 36px;
+  position: relative;
 }
 
 @media screen and (max-width: 620px) {
