--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  background-color: #000;
 }
 
 .profile__button:hover {
