--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -3,9 +3,12 @@
   padding: 0;
   background-color: transparent;
   position: absolute;
-  bottom: 27px;
+  bottom: 30px;
   right: 20px;
   z-index: 1;
+  width: 22px;
+  height: 19px;
+  background-image: url("../../../images/element-like.svg");
 }
 
 .element__button-like:hover {
