--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -2,11 +2,12 @@
   width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: border-box;
   background-color: #000;
+  background-image: url("../../../images/profile-plus.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 22px;
 }
 
 .profile__button:hover {
@@ -18,5 +19,11 @@
   .profile__button {
     margin: 0 auto;
     width: 282px;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .profile__button {
+    background-size: 16px;
   }
 }
