--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
   border: 1px solid black;
   box-sizing: border-box;
-  background-color: white;
+  background-color: darkviolet;
   position: relative;
 }
 
