--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 0 auto 0;
+  background-color: #000;
 }
 
 @media screen and (max-width: 920px) {
