--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,6 +1,7 @@
 .page__container {
   min-width: 320px;
   max-width: 1280px;
+  background-color: #000;
   margin: 0 auto;
   padding-top: 45px;
   padding-bottom: 60px;
