--- a/blocks/popup/__close-img/popup__close-img.css
+++ b/blocks/popup/__close-img/popup__close-img.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 620px) {
   .popup__close-img {
+    top: -36px;
+    right: 0;
     width: 20px;
     height: 20px;
   }
