--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,11 +1,12 @@
 .profile {
-  max-width: 880px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto 0;
-  padding-top: 40px;
-  min-height: 120px;
+    max-width: 880px;
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto 0;
+    padding-top: 40px;
+    min-height: 120px;
 }
 
 @media screen and (max-width: 920px) {
