--- a/blocks/popup-image/__close-button/popup-image__close-button.css
+++ b/blocks/popup-image/__close-button/popup-image__close-button.css
@@ -7,6 +7,7 @@
   background-color: transparent;
   top: -40px;
   right: -40px;
+  background-image: url(../../../images/popup-close.svg);
 }
 
 .popup-image__close-button:hover {
@@ -20,5 +21,6 @@
     height: 20px;
     top: -36px;
     right: 0;
+    background-size: cover;
   }
 }
