--- a/blocks/popup/__view/popup__view.css
+++ b/blocks/popup/__view/popup__view.css
@@ -1,16 +1,16 @@
-.popup-image__view {
+.popup__view {
   max-width: 75vw;
   max-height: 75vh;
 }
 
 @media screen and (max-width: 920px) {
-  .popup-image__view {
+  .popup__view {
     max-width: 500px;
   }
 }
 
 @media screen and (max-width: 620px) {
-  .popup-image__view {
+  .popup__view {
     max-width: 240px;
     max-height: 300px;
   }
