--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,12 +2,14 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
-  margin: 0 18px 0 0;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 920px) {
   .profile__title {
-    margin-left: 42px;
   }
 }
 
@@ -15,6 +17,5 @@
   .profile__title {
     font-size: 27px;
     line-height: 1.22;
-    margin-left: 36px;
   }
 }
