--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,5 +8,5 @@
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.6s linear;
+  transition: visibility 0s linear 0.6s, opacity 0.6s linear;
 }
