--- a/src/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
+++ b/src/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
@@ -4,3 +4,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: rgba(0, 0, 0, 0.2);
 }
+
+.popup__save-button_disabled:hover {
+  cursor: default;
+}
