--- a/src/blocks/popup/__view/popup__view.css
+++ b/src/blocks/popup/__view/popup__view.css
@@ -1,17 +1,20 @@
 .popup__view {
   max-width: 75vw;
   max-height: 75vh;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 920px) {
   .popup__view {
-    max-width: 500px;
+    max-width: 75vw;
   }
 }
 
 @media screen and (max-width: 620px) {
   .popup__view {
-    max-width: 240px;
-    max-height: 300px;
+    max-width: 75vw;
   }
 }
+
+
