--- a/src/blocks/popup/__error-message/popup__error-massage.css
+++ b/src/blocks/popup/__error-message/popup__error-massage.css
@@ -1,9 +1,11 @@
 .popup__error-message {
-    color: #FF0000;
-    font-family: "Inter", "Arial", sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.21;
-    padding: 0px;
-    opacity: 0;
+  color: #FF0000;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.21;
+  padding: 0px;
+  position: absolute;
+  bottom: 0px;
+  transform: translateY(100%);
 }
