--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,6 +5,11 @@
   margin-right: 30px;
 }
 
+.profile__avatar:hover {
+  opacity: .6;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 920px) {
   .profile__avatar {
     margin-right: 0;
