--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -43,3 +43,7 @@
 @import url("../blocks/profile/__open-window/profile__open-window.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
 @import url("../blocks/profile/__title/profile__title.css");
+@import url("../blocks/element/__like-count/element__like-count.css");
+@import url("../blocks/popup/__save-button/_confirm/popup__save-button_confirm.css");
+@import url("../blocks/popup/__title/_confirm/popup__title_confirm.css");
+@import url("../blocks/profile/__button-edit-avatar/profile__button-edit-avatar.css");
